--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -7,92 +7,37 @@ env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true 
   DOTNET_CLI_TELEMETRY_OPTOUT: 1 
   DOTNET_NOLOGO: 1
-  node: 20
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
 
 jobs:
-  
   build-18:
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    name: build node-18 ${{ matrix.os }}
-    steps:
+    uses: ./.github/workflows/build.yml
+    with:
+      version: 18
+      build-all: true
 
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Node 18
-        uses: ./.github/actions/build-node
-        with:
-          node: 18
-          os: ${{ matrix.os }}
-  
   build-20:
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    name: build node-20 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Node 20
-        uses: ./.github/actions/build-node
-        with:
-          node: 20
-          os: ${{ matrix.os }}
+    uses: ./.github/workflows/build.yml
+    with:
+      version: 20
+      build-all: true
 
   build-22:
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    name: build node-22 ${{ matrix.os }}
-    steps:
+    uses: ./.github/workflows/build.yml
+    with:
+      version: 22
+      build-all: true
 
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Node 22
-        uses: ./.github/actions/build-node
-        with:
-          node: 22
-          os: ${{ matrix.os }}
-  
   build-24:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    name: build node-24 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Node 24
-        uses: ./.github/actions/build-node
-        with:
-          node: 24
-          os: ${{ matrix.os }}
+    uses: ./.github/workflows/build.yml
+    with:
+      version: 24
+      build-all: true
 
   upload-artifacts:
     runs-on: ubuntu-latest
-    needs: [test-18, test-20, test-22, test-24]
-    # needs: [build-20, build-22]
+    needs: [build-18, build-20, build-22, build-24]
     timeout-minutes: 20
-    strategy:
-      fail-fast: false
 
     name: upload artifcts
     steps:
@@ -115,84 +60,6 @@ jobs:
         if: success()
         with:
           name: edge-js
-
-  test-18:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, windows-11-arm, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    needs: [build-18]
-
-    name: test node-18 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Test build
-        uses: ./.github/actions/test-build
-        with:
-          node: 18
-          os: ${{ matrix.os }}
-  
-  test-20:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, windows-11-arm, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    needs: [build-20]
-
-    name: test node-20 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Test build
-        uses: ./.github/actions/test-build
-        with:
-          node: 20
-          os: ${{ matrix.os }}
-  
-  test-22:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, windows-11-arm, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    needs: [build-22]
-
-    name: test node-22 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Test build
-        uses: ./.github/actions/test-build
-        with:
-          node: 22
-          os: ${{ matrix.os }}
-  
-  test-24:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, windows-11-arm, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    needs: [build-24]
-
-    name: test node-24 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Test build
-        uses: ./.github/actions/test-build
-        with:
-          node: 24
-          os: ${{ matrix.os }}
+          pattern: '*edge-js*'
+          delete-merged: true
   
