--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -126,22 +126,6 @@ jobs:
               core.setFailed(err)
             }
 
-      # - name: Copy artifacts
-      #   if: inputs.os == 'macos-15'
-      #   uses: actions/github-script@v7
-      #   with:
-      #     result-encoding: string
-      #     script: |
-      #       try {
-      #         const fs = require('fs')
-      #           fs.copyFileSync('release/darwin-edge-js-arm64-${{ inputs.version }}/darwin/arm64/${{ inputs.version }}/edge_coreclr.node', 'lib/native/darwin/arm64/${{ inputs.version }}/edge_coreclr.node');
-      #           fs.copyFileSync('release/darwin-edge-js-arm64-${{ inputs.version }}/darwin/arm64/${{ inputs.version }}/edge_nativeclr.node', 'lib/native/darwin/arm64/${{ inputs.version }}/edge_nativeclr.node');
-      #           fs.copyFileSync('release/darwin-edge-js-arm64-${{ inputs.version }}/darwin/arm64/${{ inputs.version }}/MonoEmbedding.exe', 'lib/native/darwin/arm64/${{ inputs.version }}/MonoEmbedding.exe');
-      #       } catch(err) {
-      #         core.error("Error creating release directory")
-      #         core.setFailed(err)
-      #       }
-
       - name: Skip arm64 tests
         if: inputs.os == 'windows-11-arm' && inputs.version < 20
         uses: actions/github-script@v7
@@ -151,14 +135,14 @@ jobs:
               core.notice('Skipping arm64 tests on Windows ARM for Node.js version ' + ${{ inputs.version }});
 
       - name: Setup env
-        if: inputs.os != 'windows-11-arm' || inputs.node >= 20
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: ./.github/actions/setup-env
         with:
           node: ${{ inputs.version }}
           os: ${{ inputs.os }}
 
       - name: Check edge-js Windows pre-built files
-        if: runner.os == 'Windows' && (inputs.os != 'windows-11-arm' || inputs.node >= 20)
+        if: runner.os == 'Windows' && (inputs.os != 'windows-11-arm' || inputs.version >= 20)
         uses: andstor/file-existence-action@v3
         with:
           files: "lib/native/win32/${{ runner.arch }}/${{ inputs.version }}/edge_coreclr.node, lib/native/win32/${{ runner.arch }}/${{ inputs.version }}/edge_nativeclr.node"
@@ -174,19 +158,19 @@ jobs:
           ignore_case: true
 
       - name: Run .NET 4.5/Mono tests
-        if: inputs.os != 'windows-11-arm' || inputs.node >= 20
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         shell: bash
         run: node tools/test.js CI
 
       - name: "Run .net core tests"
-        if: inputs.os != 'windows-11-arm' || inputs.node >= 20
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         shell: bash
         run: node tools/test.js CI
         env:
           EDGE_USE_CORECLR: 1
         
       - name: Test report
-        if: inputs.os != 'windows-11-arm' || inputs.node >= 20
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: ./.github/actions/create-test-report
         with:
           node: ${{ inputs.version }}
