--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -40,24 +40,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create release folder
-        if:  runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          cmd /c if not exist "lib\native\win32\ia32\${{ inputs.version }}" mkdir "lib\native\win32\ia32\${{ inputs.version }}"
-          cmd /c if not exist "lib\native\win32\x64\${{ inputs.version }}" mkdir "lib\native\win32\x64\${{ inputs.version }}"
-          cmd /c if not exist "lib\native\win32\arm64\${{ inputs.version }}" mkdir "lib\native\win32\arm64\${{ inputs.version }}"
+      # - name: Create release folder
+      #   if:  runner.os == 'Windows'
+      #   shell: pwsh
+      #   run: |
+      #     cmd /c if not exist "lib\native\win32\ia32\${{ inputs.version }}" mkdir "lib\native\win32\ia32\${{ inputs.version }}"
+      #     cmd /c if not exist "lib\native\win32\x64\${{ inputs.version }}" mkdir "lib\native\win32\x64\${{ inputs.version }}"
+      #     cmd /c if not exist "lib\native\win32\arm64\${{ inputs.version }}" mkdir "lib\native\win32\arm64\${{ inputs.version }}"
 
       - name: Create release folder
-        if:  runner.os == 'macOS'
         uses: actions/github-script@v7
         with:
           result-encoding: string
           script: |
             try {
               const fs = require('fs')
-              fs.mkdirSync('lib/native/darwin/x64/${{ inputs.version }}', { recursive: true });
-              fs.mkdirSync('lib/native/darwin/arm64/${{ inputs.version }}', { recursive: true });
+              fs.rmdirSync(`lib/native/${process.platform}/${{ runner.arch }}/${{ inputs.version }}`, { recursive: true });
+              fs.mkdirSync(`lib/native/${process.platform}/${{ runner.arch }}/${{ inputs.version }}`, { recursive: true });
             } catch(err) {
               core.error("Error creating release directory")
               core.setFailed(err)
@@ -71,56 +70,56 @@ jobs:
           pattern: win32-edge-js-*-${{ inputs.version }}*
 
       - name: Download artifacts
-        if:  inputs.os == 'macos-15'
+        if: runner.os == 'macOS'
         uses: actions/download-artifact@v4
         with:
           path: release
-          pattern: darwin-edge-js-arm64-${{ inputs.version }}*
+          pattern: darwin-edge-js-${{ runner.arch }}-${{ inputs.version }}*
 
-      - name: Download artifacts
-        if: inputs.os == 'macos-13'
-        uses: actions/download-artifact@v4
-        with:
-          path: release
-          pattern: darwin-edge-js-x64-${{ inputs.version }}*
+      # - name: Download artifacts
+      #   if: inputs.os == 'macos-13'
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     path: release
+      #     pattern: darwin-edge-js-x64-${{ inputs.version }}*
         
       - name: List artifacts
         shell: bash
         run: ls -R release
 
-      - name: Copy artifacts
-        if: runner.os == 'Windows' && inputs.version < 20
-        shell: pwsh
-        run: |
-          cmd /c copy /y release\win32-edge-js-ia32-${{ inputs.version }}\win32\ia32\${{ inputs.version }}\edge_*.node lib\native\win32\ia32\${{ inputs.version }}
-          cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
+      # - name: Copy artifacts
+      #   if: runner.os == 'Windows' && inputs.version < 20
+      #   shell: pwsh
+      #   run: |
+      #     cmd /c copy /y release\win32-edge-js-ia32-${{ inputs.version }}\win32\ia32\${{ inputs.version }}\edge_*.node lib\native\win32\ia32\${{ inputs.version }}
+      #     cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
 
-      - name: Copy artifacts
-        if: runner.os == 'Windows' && inputs.version >= 20 && inputs.version < 23
-        shell: pwsh
-        run: |
-          cmd /c copy /y release\win32-edge-js-ia32-${{ inputs.version }}\win32\ia32\${{ inputs.version }}\edge_*.node lib\native\win32\ia32\${{ inputs.version }}
-          cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
-          cmd /c copy /y release\win32-edge-js-arm64-${{ inputs.version }}\win32\arm64\${{ inputs.version }}\edge_*.node lib\native\win32\arm64\${{ inputs.version }}
+      # - name: Copy artifacts
+      #   if: runner.os == 'Windows' && inputs.version >= 20 && inputs.version < 23
+      #   shell: pwsh
+      #   run: |
+      #     cmd /c copy /y release\win32-edge-js-ia32-${{ inputs.version }}\win32\ia32\${{ inputs.version }}\edge_*.node lib\native\win32\ia32\${{ inputs.version }}
+      #     cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
+      #     cmd /c copy /y release\win32-edge-js-arm64-${{ inputs.version }}\win32\arm64\${{ inputs.version }}\edge_*.node lib\native\win32\arm64\${{ inputs.version }}
       
-      - name: Copy artifacts
-        if: runner.os == 'Windows' && inputs.version >= 23
-        shell: pwsh
-        run: |
-          cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
-          cmd /c copy /y release\win32-edge-js-arm64-${{ inputs.version }}\win32\arm64\${{ inputs.version }}\edge_*.node lib\native\win32\arm64\${{ inputs.version }}
+      # - name: Copy artifacts
+      #   if: runner.os == 'Windows' && inputs.version >= 23
+      #   shell: pwsh
+      #   run: |
+      #     cmd /c copy /y release\win32-edge-js-x64-${{ inputs.version }}\win32\x64\${{ inputs.version }}\edge_*.node lib\native\win32\x64\${{ inputs.version }}
+      #     cmd /c copy /y release\win32-edge-js-arm64-${{ inputs.version }}\win32\arm64\${{ inputs.version }}\edge_*.node lib\native\win32\arm64\${{ inputs.version }}
 
       - name: Copy artifacts
-        if: runner.os == 'macOS'
+        # if: runner.os == 'macOS'
         uses: actions/github-script@v7
         with:
           result-encoding: string
           script: |
             try {
               const fs = require('fs')
-              fs.copyFileSync(`release/darwin-edge-js-${{ runner.arch }}-${{ inputs.version }}/darwin/${{ runner.arch }}/${{ inputs.version }}/edge_coreclr.node`, `lib/native/darwin/${{ runner.arch }}/${{ inputs.version }}/edge_coreclr.node`);
-              fs.copyFileSync(`release/darwin-edge-js-${{ runner.arch }}-${{ inputs.version }}/darwin/${{ runner.arch }}/${{ inputs.version }}/edge_nativeclr.node`, `lib/native/darwin/${{ runner.arch }}/${{ inputs.version }}/edge_nativeclr.node`);
-              fs.copyFileSync(`release/darwin-edge-js-${{ runner.arch }}-${{ inputs.version }}/darwin/${{ runner.arch }}/${{ inputs.version }}/MonoEmbedding.exe`, `lib/native/darwin/${{ runner.arch }}/${{ inputs.version }}/MonoEmbedding.exe`);
+              fs.copyFileSync(`release/${process.platform}-edge-js-${{ runner.arch }}-${{ inputs.version }}/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/edge_coreclr.node`, `lib/native/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/edge_coreclr.node`);
+              fs.copyFileSync(`release/${process.platform}-edge-js-${{ runner.arch }}-${{ inputs.version }}/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/edge_nativeclr.node`, `lib/native/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/edge_nativeclr.node`);
+              //fs.copyFileSync(`release/${process.platform}-edge-js-${{ runner.arch }}-${{ inputs.version }}/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/MonoEmbedding.exe`, `lib/native/${process.platform}/${{ runner.arch }}/${{ inputs.version }}/MonoEmbedding.exe`);
             } catch(err) {
               core.error("Error creating release directory")
               core.setFailed(err)
