--- a/.github/workflows/build-edge.yml
+++ b/.github/workflows/build-edge.yml
@@ -24,8 +24,8 @@ on:
         description: 'arch'
         required: true
         type: string
-      os-name:
-        description: 'OS short name'
+      platform:
+        description: 'process.platform'
         required: true
         type: string
 
@@ -33,7 +33,7 @@ jobs:
   build-edge:
     runs-on: ${{ inputs.os }}
     environment: ${{ inputs.environment }}
-    name: build-${{ inputs.os-name }}-${{ inputs.arch }}-node-${{ inputs.version }}
+    name: build-${{ inputs.platform }}-${{ inputs.arch }}-node-${{ inputs.version }}
     timeout-minutes: 20
     steps:
       
