--- a/.github/workflows/build-edge.yml
+++ b/.github/workflows/build-edge.yml
@@ -66,6 +66,15 @@ jobs:
               core.setFailed(err)
             }
 
+      - if: runner.os == 'Windows'
+        name: Cache node-gyp Windows
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-gyp
+        with:
+          path: ~\AppData\Local\node-gyp\Cache
+          key: '${{ runner.os }}-${{ runner.arch }}-${{ inputs.version }}'
+
       - name: Create node.version file
         if: ${{ (inputs.arch == 'ia32' && inputs.version < 23) || (inputs.arch == 'arm64' && runner.os == 'Windows' && inputs.version > 19) || (inputs.arch == 'x64') || (runner.os == 'macOS') }}
         uses: actions/github-script@v7
