--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -31,16 +31,7 @@ runs:
         cache-name: cache-node-gyp
       with:
         path: ~/.cache/node-gyp
-        key: '${{ inputs.os }}-${{ inputs.arch }}-${{ inputs.node}}'
-
-    - name: Cache node-gyp macOS
-      if: runner.os == 'macOS'
-      uses: actions/cache@v4
-      env:
-        cache-name: cache-node-gyp
-      with:
-        path: ~/Library/Caches/node-gyp
-        key: '${{ inputs.os }}-${{ inputs.arch }}-${{ inputs.node}}'
+        key: '${{ inputs.os }}-${{ runner.arch }}-${{ inputs.node}}'
 
     - if: runner.os == 'macOS' && inputs.node == 16
       shell: bash
