--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -3,7 +3,8 @@ description: 'Sets up environment'
 inputs:
   node:
     description: 'Node.js version'
-    required: true
+    required: false
+    default: '22'
   os:
     description: 'runs-on'
     required: true
@@ -11,12 +12,17 @@ inputs:
     description: 'Architecture'
     required: false
     default: ''
+  install:
+    description: 'run npm install?'
+    required: false
+    default: 'true'
 
 runs:
   using: "composite"
   steps:
 
     - name: Setup NodeJS
+      if: ${{ inputs.install == 'true' }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node }}
@@ -40,6 +46,7 @@ runs:
         pip install setuptools
 
     - name: Cache node modules
+      if: ${{ inputs.install == 'true' }}
       id: cache-nodemodules
       uses: actions/cache@v4
       env:
@@ -72,6 +79,7 @@ runs:
         node -v && npm -v && dotnet --version && node -p process.platform && node -p process.arch
 
     - name: npm install
+      if: ${{ inputs.install == 'true' }}
       shell: bash
       run: npm i
       env:
