--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -2,79 +2,79 @@ name: CI out of support
 
 on:
   workflow_dispatch:
-  # pull_request:
-  #   paths-ignore:
-  #     - 'samples/*'
-  #     - 'stress/*'
-  #     - 'performance/*'
-  #     - '.github/FUNDING.YML'
-  #     - '.github/workflows/ci.yml'
-  #     - '.github/workflows/build.yml'
-  #     - '.github/workflows/build*.yml'
-  #     - '.github/actions/test-build/action.yml'
-  #     - '.github/actions/build*/*.*'
-  #     - '.github/actions/build/*.*'
-  #     - '**/*.md'
-  #     - '**/*.d.ts'
-  #     - '**/*.bat'
-  #     - '.travis.yml'
-  #     - 'Dockerfile'
-  #     - '.gitconfig'
-  #     - '.gitignore'
-  #     - 'appveyor*.*'
-  #     - 'LICENSE*'
-  #     - '.idea/**'
-  #     - '.vscode/**'
-  #     - '*.bat'
-  #     - '*.nuspec'
-  #     - 'tools/nuget/*'
-  #     - '.npmignore'
-  #     - 'test/config.json'
-  #     - 'test/double'
-  #     - '.circleci'
-  #     - '.circleci/*'
-  #     - 'README.md'
-  #     - '*.sln'
-  #     - '*.vcxproj'
-  #     - 'tools/build.js'
+  pull_request:
+    paths-ignore:
+      - 'samples/*'
+      - 'stress/*'
+      - 'performance/*'
+      - '.github/FUNDING.YML'
+      - '.github/workflows/ci.yml'
+      - '.github/workflows/build.yml'
+      - '.github/workflows/build*.yml'
+      - '.github/actions/test-build/action.yml'
+      - '.github/actions/build*/*.*'
+      - '.github/actions/build/*.*'
+      - '**/*.md'
+      - '**/*.d.ts'
+      - '**/*.bat'
+      - '.travis.yml'
+      - 'Dockerfile'
+      - '.gitconfig'
+      - '.gitignore'
+      - 'appveyor*.*'
+      - 'LICENSE*'
+      - '.idea/**'
+      - '.vscode/**'
+      - '*.bat'
+      - '*.nuspec'
+      - 'tools/nuget/*'
+      - '.npmignore'
+      - 'test/config.json'
+      - 'test/double'
+      - '.circleci'
+      - '.circleci/*'
+      - 'README.md'
+      - '*.sln'
+      - '*.vcxproj'
+      - 'tools/build.js'
 
-  # push:
-  #   branches-ignore:
-  #     - 'circleci'
-  #   paths-ignore:
-  #     - 'samples/*'
-  #     - 'stress/*'
-  #     - 'performance/*'
-  #     - '.github/FUNDING.YML'
-  #     - '.github/workflows/ci.yml'
-  #     - '.github/workflows/build.yml'
-  #     - '.github/workflows/build*.yml'
-  #     - '.github/actions/test-build/action.yml'
-  #     - '.github/actions/build*/*.*'
-  #     - '.github/actions/build/*.*'
-  #     - '**/*.md'
-  #     - '**/*.d.ts'
-  #     - '**/*.bat'
-  #     - '.travis.yml'
-  #     - 'Dockerfile'
-  #     - '.gitconfig'
-  #     - '.gitignore'
-  #     - 'appveyor*.*'
-  #     - 'LICENSE*'
-  #     - '.idea/**'
-  #     - '.vscode/**'
-  #     - '*.bat'
-  #     - '*.nuspec'
-  #     - 'tools/nuget/*'
-  #     - '.npmignore'
-  #     - 'test/config.json'
-  #     - 'test/double'
-  #     - '.circleci'
-  #     - '.circleci/*'
-  #     - 'README.md'
-  #     - '*.sln'
-  #     - '*.vcxproj'
-  #     - 'tools/build.js'
+  push:
+    branches-ignore:
+      - 'circleci'
+    paths-ignore:
+      - 'samples/*'
+      - 'stress/*'
+      - 'performance/*'
+      - '.github/FUNDING.YML'
+      - '.github/workflows/ci.yml'
+      - '.github/workflows/build.yml'
+      - '.github/workflows/build*.yml'
+      - '.github/actions/test-build/action.yml'
+      - '.github/actions/build*/*.*'
+      - '.github/actions/build/*.*'
+      - '**/*.md'
+      - '**/*.d.ts'
+      - '**/*.bat'
+      - '.travis.yml'
+      - 'Dockerfile'
+      - '.gitconfig'
+      - '.gitignore'
+      - 'appveyor*.*'
+      - 'LICENSE*'
+      - '.idea/**'
+      - '.vscode/**'
+      - '*.bat'
+      - '*.nuspec'
+      - 'tools/nuget/*'
+      - '.npmignore'
+      - 'test/config.json'
+      - 'test/double'
+      - '.circleci'
+      - '.circleci/*'
+      - 'README.md'
+      - '*.sln'
+      - '*.vcxproj'
+      - 'tools/build.js'
 
 env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true # required to setup CSC
@@ -101,6 +101,15 @@ jobs:
         name: Add missing packages for macOS NodeJs 16 
         run: |
           brew install python-setuptools --overwrite
+
+      - if: runner.os == 'macOS'
+        name: Cache node-gyp macOS
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-gyp
+        with:
+          path: ~/Library/Caches/node-gyp/
+          key: '${{ matrix.os }}-${{ runner.arch }}-${{ matrix.node }}'
 
       - name: Setup env
         uses: ./.github/actions/setup-env
