--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create release folder
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: actions/github-script@v7
         with:
           result-encoding: string
@@ -58,7 +59,7 @@ jobs:
             }
 
       - name: Download artifacts
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && (inputs.os != 'windows-11-arm' || inputs.version >= 20)
         uses: actions/download-artifact@v4
         with:
           path: release
@@ -72,10 +73,12 @@ jobs:
           pattern: darwin-edge-js-*-${{ inputs.version }}*
 
       - name: List artifacts
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         shell: bash
         run: ls -R release
 
       - name: Copy artifacts
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: actions/github-script@v7
         with:
           result-encoding: string
