--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,10 +31,10 @@ on:
 
 jobs:
   test-build:
-    if: inputs.os != 'windows-11-arm' || inputs.version >= 20
     runs-on: ${{ inputs.os }}
     environment: ${{ inputs.environment }}
     name: ${{ inputs.name }}-node-${{ inputs.version }}
+    if: inputs.os != 'windows-11-arm' || inputs.version >= 20
     timeout-minutes: 20
     steps:
 
@@ -42,7 +42,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create release folder
-        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: actions/github-script@v7
         with:
           result-encoding: string
@@ -60,7 +59,7 @@ jobs:
             }
 
       - name: Download artifacts
-        if: runner.os == 'Windows' && (inputs.os != 'windows-11-arm' || inputs.version >= 20)
+        if: runner.os == 'Windows'
         uses: actions/download-artifact@v4
         with:
           path: release
@@ -74,7 +73,6 @@ jobs:
           pattern: darwin-edge-js-*-${{ inputs.version }}*
 
       - name: List artifacts
-        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         shell: bash
         run: ls -R release
 
