--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -34,7 +34,6 @@ jobs:
     runs-on: ${{ inputs.os }}
     environment: ${{ inputs.environment }}
     name: ${{ inputs.name }}-node-${{ inputs.version }}
-    if: inputs.os != 'windows-11-arm' || inputs.version >= 20
     timeout-minutes: 20
     steps:
 
@@ -42,6 +41,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create release folder
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         uses: actions/github-script@v7
         with:
           result-encoding: string
@@ -59,7 +59,7 @@ jobs:
             }
 
       - name: Download artifacts
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && (inputs.os != 'windows-11-arm' || inputs.version >= 20)
         uses: actions/download-artifact@v4
         with:
           path: release
@@ -73,6 +73,7 @@ jobs:
           pattern: darwin-edge-js-*-${{ inputs.version }}*
 
       - name: List artifacts
+        if: inputs.os != 'windows-11-arm' || inputs.version >= 20
         shell: bash
         run: ls -R release
 
