--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -37,9 +37,17 @@ runs:
             core.exportVariable('test_passing', report.stats.passes);
             core.exportVariable('test_skipped', report.stats.pending); 
             core.exportVariable('test_failures', Number(report.stats.failures));
-            core.notice('| :white_check_mark: | :arrow_right_hook: | :x:     |');
-            core.notice('| -------------------------- | -------------------------- | -------------- |');
-            core.notice('| a | b | c |');
+            const tableData = [
+            {data: 'Header1', header: true},
+            {data: 'Header2', header: true},
+            {data: 'Header3', header: true},
+            {data: 'MyData1'},
+            {data: 'MyData2'},
+            {data: 'MyData3'}
+          ]
+
+            // Add an HTML table
+          core.summary.addTable([tableData])
            // core.notice(JSON.stringify(stats));
             // if(stats.failures > 0) {
             //   core.setFailed(`There are ${stats.failures} test failures`);
