testing CI changes

--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -47,7 +47,8 @@ runs:
           ]
 
             // Add an HTML table
-          core.summary.addTable([tableData])
+          core.summary.addTable([tableData]);
+          core.summary.write();
            // core.notice(JSON.stringify(stats));
             // if(stats.failures > 0) {
             //   core.setFailed(`There are ${stats.failures} test failures`);
